--- a/index.html
+++ b/index.html
@@ -40,12 +40,29 @@
     </div>
     
     <h3>Research</h3>
-    <p>Currently involved in researching machine learning.</p>
+    <p>Currently involved in researching reinforcement learning.</p>
     <h3>Future</h3>
     <p>
         In the future I plan on participating in more hackathons and
         game jams along with making personal projects 
         such as this website and my own games.
+    </p>
+    <h3>Links</h3>
+    <p>
+        <a href="https://www.linkedin.com/in/wesley-wild-326a59324/" target="_blank">
+            LinkedIn
+        </a>
+        <br>
+
+        <a href="https://wwplays.itch.io/" target="_blank">
+            Itch.io
+        </a>
+        <br>
+
+        <a href="https://github.com/wesW1ld" target="_blank">
+            GitHub
+        </a>
+        <br>
     </p>
 </body>
 </html>
