--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -16,7 +16,55 @@
         This website is a portfolio of the work 
         I’ve done, work I’m doing, 
         and work I plan on doing. 
-        I hope you enjoy!</p>
+        I hope you enjoy!
+    </p>
+
+    <h3>Professional Writing Class Assignments</h3>
+    <h4>Ollie Instructions</h5>
+    <p>
+        For my professional writing class, I was assigned to make instructions. 
+        I choose to write about how to ollie, since I skateboard often 
+        and have spent a lot of time learning and improving at the trick.
+        In this document, I communicated my ideas clearly, 
+        which is a useful skill for working with a team and brainstorming.
+        I also was able to communicate complex processes, 
+        which I did mainly by breaking the task down into manageable steps
+        such as the one shown below.
+    </p>
+    <div class="image-container">
+        <img src="/images/example1.png" 
+                    alt="Steps Example"
+                    height="200"
+                    class="center-image"
+        >
+    </div>
+    <p>
+        When writing these steps I focused on the user, 
+        which is an important skill for when designing software 
+        that needs to be beginner or user friendly.
+        One of the ways I did this was through writing common mistakes as shown below,
+        many of which I made when first learning how to ollie.
+    </p>
+    <div class="image-container">
+        <img src="/images/example2.png" 
+                    alt="Steps Example"
+                    height="100"
+                    class="center-image"
+        >
+    </div>
+    <p>
+        These common mistakes sections also show my attention to detail
+        in combating problems the reader might face.
+        This is similar to debugging and optimizing code 
+        where it helps to cover potential problems in the future and think about corner cases.
+    </p>
+    <p>
+        <a href="https://drive.google.com/file/d/123ONA9-sKoaxOEywMrRenynApEpugsA1/view?usp=sharing" target="_blank">
+            Link to full document
+        </a>
+    </p>
+
+
     <h3>Games</h3>
     <div>
         <a href="https://dormio-san.itch.io/decking-everything"
@@ -38,9 +86,54 @@
                     id="image">
         </a>
     </div>
+    <p>
+        <h4>Skills Enhanced Through Game Projects</h4>
+        <ul>
+            <li>Collaboration</li>
+            <ul>
+                <li>Working in a cross-disciplinary team</li>
+                <li>Version control with Git and GitHub and dealing with merge conflicts</li>
+                <li>In person and online communication</li>
+                <li>Managing who did which parts of the project</li>
+            </ul>
+            <li>Time Management</li>
+            <ul>
+                <li>Both games where done over the course of a weekend</li>
+                <li>Managing the scope of the games throughout each weekend</li>
+                <li>Balancing quality with quantity</li>
+            </ul>
+            <li>Technical Skills</li>
+            <ul>
+                <li>Working in an Engine</li>
+                <li>Animation implementation</li>
+                <li>Designing and implementing enemy AI was a specific task of mine</li>
+                <li>Implmenting user-friendly UI</li>
+            </ul>
+            <li>Creativity</li>
+            <ul>
+                <li>Learned how to make basic 2D art</li>
+                <li>Using unintended features as inspiration for game mechanics</li>
+                <li>Level design</li>
+            </ul>
+            <li>User Feedback</li>
+            <ul>
+                <li>Using playtesters to get a different viewpoint</li>
+                <li>Using playtester feedback to improve</li>
+                <li>Example of above was when a playtester said the game was too hard,
+                    so we improved to tutorial to teach the mechanics better.
+                </li>
+            </ul>
+        </ul>
+    </p>
     
     <h3>Research</h3>
-    <p>Currently involved in researching reinforcement learning.</p>
+    <p>
+        Currently involved in researching reinforcement learning. 
+        I have been working with other ungraduates and 
+        a grad student to learn more about machine learning.
+        We have been learning the basics and implmenting other's code to understand
+        topics such as a Markov Decision Process and python libraries such as PyTorch and MatPlotLib.
+    </p>
     <h3>Future</h3>
     <p>
         In the future I plan on participating in more hackathons and
